--- a/public/styles/page/lib/multitext.module.scss
+++ b/public/styles/page/lib/multitext.module.scss
@@ -1,64 +1,61 @@
 /* ----------------------- IMPORTS ----------------------------- */
 
-@import 'public/styles/foundation/foundation';
+@use 'public/styles/foundation/colors';
+@use 'public/styles/foundation/fonts';
+@use 'public/styles/foundation/responsive';
 
 /* ----------------------- STYLES ----------------------------- */
 
 // Multitext element
-.multitext_container
-{
-	border:
-	{
+.multitext-container {
+	border: {
 		style: inset;
 		width: 1px;
 		radius: 1px;
-		color: map-get($COLORS, blackTheme);
+		color: colors.$black;
 	}
 
 	padding: 8px;
-
 	display: flex;
 	justify-content: flex-start;
 	align-items: flex-start;
 	flex-wrap: wrap;
-	box-shadow: 2px 2px 4px -1px map-get($COLORS, grayTheme);
+	box-shadow: 2px 2px 4px -1px colors.$gray;
 
-	@include phoneOnly()
-	{
+	@include responsive.phone-only() {
 		flex-direction: column;
 	}
 }
 
-.multitext_existing_values
-{
+.multitext-existing-values {
 	display: flex;
 	justify-content: flex-start;
 	align-items: flex-start;
 	flex-wrap: wrap;
 }
 
-.multitext_set_value
-{
-	margin:
-	{
+.multitext-set-value {
+	margin: {
 		top: 5px;
 		bottom: 5px;
 		left: 3px;
 		right: 3px;
 	}
 
-	border-radius: 6px;
+	border: {
+		radius: 6px;
+	}
+
 	padding: 5px;
 	text-align: center;
-	background-color: map-get($COLORS, slateGrayTheme);
-	color: map-get($COLORS, whiteTheme);
+	background-color: colors.$slate-gray;
+	color: colors.$white;
 	display: flex;
 	align-items: center;
 }
 
-.multitext_new_value
-{
-	@include basicFontSettings($size: secondary, $family: Poppins);
+.multitext-new-value {
+	@include fonts.define-font($size: fonts.$secondary, $family: Poppins);
 
 	border: none;
 	box-shadow: none;
@@ -66,26 +63,21 @@
 	width: 100%;
 	height: 2em;
 
-	@include tabletUp()
-	{
+	@include responsive.tablet-up() {
 		min-width: 400px;
 	}
 
-	@include phoneOnly()
-	{
+	@include responsive.phone-only() {
 		min-width: 225px;
 	}
 
-	&:focus
-	{
+	&:focus {
 		outline: none;
 	}
 }
 
-.multitext_remove_mark
-{
-	margin:
-	{
+.multitext-remove-mark {
+	margin: {
 		left: 4px;
 		right: 4px;
 	}
